conjure-typescript/src/test/resources/errors/expected/@palantir/another/errors.ts
export interface IDifferentPackage {
    'errorCode': "INTERNAL";
    'errorInstanceId': string;
    'errorName': "Conjure:DifferentPackage";
    'parameters': {
    }
;
}
